--- a/posts/2016-08-03.md
+++ b/posts/2016-08-03.md
@@ -903,7 +903,7 @@ result
 
 I've not put the logic in yet, because the complete thing is pretty large. Instead, let's look at each fragment one piece at a time. 
 
-The logic for the cases where the keys an *in*equal is not horrible. We want to copy the key, values, and histories into `result`. Here is the code for the `Ordering::Less` case, where we want to read out of the iterators derived from `trie1`.
+The logic for the cases where the keys are *in*equal is not horrible. We want to copy the key, values, and histories into `result`. Here is the code for the `Ordering::Less` case, where we want to read out of the iterators derived from `trie1`.
 
 ```rust
 // append in key, vals, and their histories.
@@ -917,9 +917,9 @@ result.keys.push((key, result.vals.len()));
 
 This isn't so bad, is it? We pop open the key and its count, grab that many entries from the `vals1` iterator, and for each of its entries (a value and count) we grab the right number of entries from `hist1`. The main non-obvious thing, from my point of view, is the use of `by_ref()`. This creates a new iterator from a mutable reference to an iterator; this means we can use the iterator without consuming it, which something like `take` would otherwise do.
 
-This same logic, excluding the first line, is what we use to drain `keys1` at the end of the loop, too. And it is the same logic, swapping `1` for `2` we use in the `Ordering::Greater` case and to drain `keys2`. The only thing left is to investigate the `Ordering::Equal` case.
+This same logic, excluding the first line, is what we use to drain `keys1` at the end of the loop, too. And it is the same logic, swapping `1` for `2` we use in the `Ordering::Greater` case and to drain `keys2`. The main appealing property about these fragments is that they do no conditional logic, so they should be implementable nearly as copies. They aren't, because Rust isn't quite there yet, but I've worked around that in another implementation we will measure.
 
-The case where the keys are equal means we need to do a merge, and that isn't all that different from what we've just written, with a few important changes and exceptions. Obviously we will be merging values rather than keys, but perhaps less obviously at the end of the merge we may not have added any values, if things cancelled.
+The only thing left is to investigate the `Ordering::Equal` case. The case where the keys are equal means we need to do a merge, and that isn't all that different from what we've just written, with a few important changes and exceptions. Obviously we will be merging values rather than keys, but perhaps less obviously at the end of the merge we may not have added any values, if things cancelled.
 
 Here is what I wrote for the equals case, with comments calling out the less-obvious changes:  
 
@@ -1003,7 +1003,7 @@ Ok! I think we are done with that. Well done sticking through with us.
 
 You might have notice that we wrote the same sort of code a lot, over and over. It's true. Could we possibly re-factor this a bit and make something more general? Yes! In fact, there is already a crate that does this and some other cool things, over at [frankmcsherry/trie](https://github.com/frankmcsherry/trie). 
 
-What's an example "cool thing"? When we see that `key1 < key2` or somesuch, we just write out `key1` and move along. Instead, we *could* ask for how many keys `key1` this is true, and then copy them all over in batch. Awesomely, we can find out how many keys are less than `key2` using time logarithmic in that number, doing an exponentially growing search. This can be a great optimization when there are runs of keys in one trace but not the other, which is not uncommon in cases like (i) bulk loading of data or (ii) merging many updates to few hot keys. It results in fewer, larger copies which is always good news.
+Apparently the code is just faster that what we've written, too. More on that later.
 
 ### Iterating over data 
 
@@ -1110,7 +1110,7 @@ Let's start with the test we've used so far: 1000 keys and 1000 values. Each mil
 	throughput: 3820566.10 elts/sec @ 1047000000 elts
 	throughput: 3821941.38 elts/sec @ 1048000000 elts
 
-These throughputs always hit the inner merge logic, but fortunately in this case that inner merge logic moves less data around, and we win out a little bit. For reference, here are both the first and final moments of the merging list-based approach with the same arguments, copied from up above:
+These computations always hit the inner merge logic, but fortunately in this case that inner merge logic moves less data around, and we hope to win out a little bit. For reference, here are both the first and final moments of the merging list-based approach with the same arguments, copied from up above:
 
 	Echidnatron% cargo run --release --bin profile-insert -- 1000 1000 1000 1000 lists
 	     Running `target/release/profile-insert 1000 1000 1000 1000 lists`
@@ -1124,7 +1124,7 @@ These throughputs always hit the inner merge logic, but fortunately in this case
 	throughput: 4087287.71 elts/sec @ 523000000 elts
 	throughput: 4091650.69 elts/sec @ 524000000 elts
 
-These arguments, 1000 keys and 1000 values, mean that there really is only one value for each key, equal to itself. Each trie that we merge has the same properties, so we still spend our time doing lots of merges, just on `(T, isize)` elements rather than full `(K, V, T, isize)` tuples. I expected to see some performance improvement.
+These arguments, 1000 keys and 1000 values, mean that there really is only one value for each key, equal to itself. Each trie that we merge has the same properties, so we still spend our time doing lots of merges, just on `(T, isize)` elements rather than full `(K, V, T, isize)` tuples. I was expecting to see some performance improvement.
 
 As it turns out, we do see improved performance when using the [trie crate](https://github.com/frankmcsherry/trie). 
 
@@ -1144,11 +1144,11 @@ As it turns out, we do see improved performance when using the [trie crate](http
 	throughput: 6030676.76 elts/sec @ 1047000000 elts
 	throughput: 6032800.13 elts/sec @ 1048000000 elts
 
-I don't have a great explanation for this, other than that the trie crate is largely based on arrays rather than iterators, so Rust's "zero-cost abstraction" mantra might need a check-up. I'll look into this more, because (i) it *shouldn't* be so much of a problem, and (ii) it would be nice to understand better.
+I don't have a great explanation for this, other than that the trie crate is largely based on arrays rather than iterators, so Rust's "zero-cost abstraction" mantra might need its annual check-up. I'd like look into this more, because (i) it *shouldn't* be so much of a problem, and (ii) it would be nice to understand better.
 
-The trie-based approach gets us two things in this case, slightly better performance and twice as much capacity before we hit the self-imposed 16GB limit. Navigation should be much faster too, because we only need to poke around in the 1000 keys rather than the 1048000000 or whatever tuples (32GB-ish using lists).
+The trie-based approach gets us two things in this case, slightly better performance and (more importantly, I think) twice as much capacity before we hit the self-imposed 16GB limit. Navigation should be much faster too, because we only need to poke around in the 1000 keys rather than the 1048000000 or whatever tuples (32GB-ish using lists).
 
-Let's change this up a bit and use 1001 keys, so that we get one million distinct key-value pairs in each batch. This should make for more value merging and less time merging, which isn't great news for tries. It should have no effect on the list based approach, so we will skip re-measuring that.
+Let's change this up a bit and use 1001 keys, so that we get one million distinct key-value pairs in each batch. This should make for more value-merging and less time-merging, which isn't great news for tries. It should have no effect on the list based approach, so we will skip re-measuring that.
 
 Here is the `Tries` implementation,
 
@@ -1272,7 +1272,7 @@ There is some difference here, but it turns out that there is just a fair amount
 	throughput: 7732909.29 elts/sec @ 1047000000 elts
 	throughput: 7736427.85 elts/sec @ 1048000000 elts
 
-This is much better, though we are pretty much just inserting sorted data at this point. It doesn't have to be, it was just an easy way to make the values distinct, but there is a silly amount of structure in the input designed to make the numbers as good as they can be. They could probably be better; I haven't profiled it yet to see what the hold-up is. 
+This is much better, though we are pretty much just inserting sorted data at this point. It doesn't have to be, it was just an easy way to make the values distinct, but there is a silly amount of structure in the input designed to make the numbers as good as they can be. They should probably be better, as we really only need to be copying memory around in this case; I haven't profiled it yet to see what the hold-up is, but even just sorting the 1000 records each tops out at about 27 million elements per second (not radix sort).
 
 I should re-iterate that the trie-structuring isn't so much about increasing insertion throughput, though that would be great, as much as increasing capacity (check!) and simplifying indexing and navigation, something we will get to next!
 
