--- a/posts/2016-08-03.md
+++ b/posts/2016-08-03.md
@@ -1276,6 +1276,46 @@ This is much better, though we are pretty much just inserting sorted data at thi
 
 I should re-iterate that the trie-structuring isn't so much about increasing insertion throughput, though that would be great, as much as increasing capacity (check!) and simplifying indexing and navigation, something we will get to next!
 
+### Errata (added later)
+
+I made fun of Rust for some slowness that I attributed to crappy iterator abstraction. That may have been wrong.
+
+Specifically, the [trie crate](https://github.com/frankmcsherry/trie) gets better performance than iterator-based merging, but it also has an algorithmic improvement I failed to mention. Rather, I remembered it, but I didn't realize that it would be relevant, so I cut the next talking about how clever it was. Apparently it was clever, so points awarded to past me, deducted from present me.
+
+The merge implementation in the trie crate does something potentially clever in the not-equals cases. Let's pick the shortest (and most relevent) example from the code we wrote above, the inner loop where we merge histories. 
+
+```rust
+while hist1.peek().is_some() && hist2.peek().is_some() {
+	match hist1.peek().unwrap().0.cmp(&hist2.peek().unwrap().0) {
+		Ordering::Less => { 
+			result.hist.push(hist1.next().unwrap()); 
+		}
+		Ordering::Equal => { 
+			let (time, delta1) = hist1.next().unwrap();
+			let (____, delta2) = hist2.next().unwrap();
+			if delta1 + delta2 != 0 {
+				result.hist.push((time, delta1 + delta2));
+			}
+		}
+		Ordering::Greater => { 
+			result.hist.push(hist2.next().unwrap()); 
+		}
+	}
+}
+```
+
+This walks through each element of the iterator, each time performing a comparison. We end up doing some linear number of comparisons, which sounds like the right number, right?
+
+You can do lots fewer comparisons, sometimes.
+
+In each of the not-equals cases, we learn that the head of one list is less than the head of some other list. We could, hypothetically, take this opportunity to read off all elements in the first list that are least than the head of the second list. If you just have an iterator, you kind of need to compare each element in turn. Instead, if you know your iterator is backed by a sorted array, you can do an exponential search to find the first element in the first list that is greater-or-equal to the head of the second list. This performs a number of comparisons logarithmic in the number of elements you can read off. Then you just `memcpy` them into place.
+
+This is relevant because in all of those examples up above, with many keys and with few keys, the list of `(T, isize)` elements associated with each key value pair have `T` timestamps, which naturally increase as we run. When we merge two tries, one will be older than the other, and have smaller timestamps for all key-value pairs. We will merge keys one by one, and then values one-by-one, but when we get to timestamps, the trie crate implementation will do a logarithmic number of comparisons and two `memcpy`s.
+
+Even the sorted list implementation can benefit from this optimization: the same older vs newer property holds for each of the lists we merge, and each will have non-trivial runs to `memcpy`. The exponential search after each merge step is pretty easy to write (or copy), and it just relies on breaking the iterator abstraction boundary which is pretty easy for the sorted lists. I will try this out tomorrow!
+
+So, there are definitely some places where Rust's abstractions hurt (iterators not actually being turned in to `memcpy`s, despite claims (mine) that they could), but it isn't clear that the performance discrepancies seen above derive from any of these places.
+
 ## Part 4: Adding an index.
 
 Coming even later!
