errata typo; geez

--- a/posts/2016-08-03.md
+++ b/posts/2016-08-03.md
@@ -1308,7 +1308,7 @@ This walks through each element of the iterator, each time performing a comparis
 
 You can do lots fewer comparisons, sometimes.
 
-In each of the not-equals cases, we learn that the head of one list is less than the head of some other list. We could, hypothetically, take this opportunity to read off all elements in the first list that are least than the head of the second list. If you just have an iterator, you kind of need to compare each element in turn. Instead, if you know your iterator is backed by a sorted array, you can do an exponential search to find the first element in the first list that is greater-or-equal to the head of the second list. This performs a number of comparisons logarithmic in the number of elements you can read off. Then you just `memcpy` them into place.
+In each of the not-equals cases, we learn that the head of one list is less than the head of some other list. We could, hypothetically, take this opportunity to read off all elements in the first list that are less than the head of the second list. If you just have an iterator, you kind of need to compare each element in turn. Instead, if you know your iterator is backed by a sorted array, you can do an exponential search to find the first element in the first list that is greater-or-equal to the head of the second list. This performs a number of comparisons logarithmic in the number of elements you can read off. Then you just `memcpy` them into place.
 
 This is relevant because in all of those examples up above, with many keys and with few keys, the list of `(T, isize)` elements associated with each key value pair have `T` timestamps, which naturally increase as we run. When we merge two tries, one will be older than the other, and have smaller timestamps for all key-value pairs. We will merge keys one by one, and then values one-by-one, but when we get to timestamps, the trie crate implementation will do a logarithmic number of comparisons and two `memcpy`s.
 
