--- a/posts/2016-08-03.md
+++ b/posts/2016-08-03.md
@@ -1280,7 +1280,7 @@ I should re-iterate that the trie-structuring isn't so much about increasing ins
 
 I made fun of Rust for some slowness that I attributed to crappy iterator abstraction. That may have been wrong.
 
-Specifically, the [trie crate](https://github.com/frankmcsherry/trie) gets better performance than iterator-based merging, but it also has an algorithmic improvement I failed to mention. Rather, I remembered it, but I didn't realize that it would be relevant, so I cut the next talking about how clever it was. Apparently it was clever, so points awarded to past me, deducted from present me.
+Specifically, the [trie crate](https://github.com/frankmcsherry/trie) gets better performance than iterator-based merging, but it also has an algorithmic improvement I failed to mention. Rather, I remembered it, but I didn't realize that it would be relevant, so I cut the text talking about how clever it was. Apparently it was clever, so points awarded to past me, deducted from present me.
 
 The merge implementation in the trie crate does something potentially clever in the not-equals cases. Let's pick the shortest (and most relevent) example from the code we wrote above, the inner loop where we merge histories. 
 
@@ -1315,6 +1315,88 @@ This is relevant because in all of those examples up above, with many keys and w
 Even the sorted list implementation can benefit from this optimization: the same older vs newer property holds for each of the lists we merge, and each will have non-trivial runs to `memcpy`. The exponential search after each merge step is pretty easy to write (or copy), and it just relies on breaking the iterator abstraction boundary which is pretty easy for the sorted lists. I will try this out tomorrow!
 
 So, there are definitely some places where Rust's abstractions hurt (iterators not actually being turned in to `memcpy`s, despite claims (mine) that they could), but it isn't clear that the performance discrepancies seen above derive from any of these places.
+
+### Addendum
+
+I implemented the version of `merge` on sorted lists that does exponential search to find how many elements to copy, which can improve performance in the case there are runs in either input that should be copied contiguously. This is the case when we use keys and vals of 1000, for example, because in each round of one million elements there are only 1000 distinct values, each of which has 1000 increasing timestamps. Merging between rounds of one million elements should just copy the 1000 elements of each's histories.
+
+Here are the numbers, first with the old merge (copy/pasted from above):
+
+	Echidnatron% cargo run --release --bin profile-insert -- 1000 1000 1000 1000 lists
+	     Running `target/release/profile-insert 1000 1000 1000 1000 lists`
+	throughput: 6407104.61 elts/sec @ 1000000 elts
+	throughput: 5731598.78 elts/sec @ 2000000 elts
+	throughput: 5360619.80 elts/sec @ 3000000 elts
+	throughput: 5560609.58 elts/sec @ 4000000 elts
+	throughput: 5005889.36 elts/sec @ 5000000 elts
+	...
+	throughput: 4083296.32 elts/sec @ 522000000 elts
+	throughput: 4087287.71 elts/sec @ 523000000 elts
+	throughput: 4091650.69 elts/sec @ 524000000 elts
+
+And next with the new merge:
+
+	Echidnatron% cargo run --release --bin profile-insert -- 1000 1000 1000 1000 lists
+	     Running `target/release/profile-insert 1000 1000 1000 1000 lists`
+	throughput: 6921776.01 elts/sec @ 1000000 elts
+	throughput: 6586201.96 elts/sec @ 2000000 elts
+	throughput: 6091053.70 elts/sec @ 3000000 elts
+	throughput: 6217983.53 elts/sec @ 4000000 elts
+	throughput: 5583829.84 elts/sec @ 5000000 elts
+	...
+	throughput: 4563902.73 elts/sec @ 522000000 elts
+	throughput: 4568167.76 elts/sec @ 523000000 elts
+	throughput: 4572768.42 elts/sec @ 524000000 elts
+
+Finally, the trie crate implementation (copy/pasted from above): 
+
+	Echidnatron% cargo run  --release --bin profile-insert -- 1000 1000 1000 1000 trie-crate
+	     Running `target/release/profile-insert 1000 1000 1000 1000 trie-crate`
+	throughput: 7948465.33 elts/sec @ 1000000 elts
+	throughput: 7465856.38 elts/sec @ 2000000 elts
+	throughput: 7140011.66 elts/sec @ 3000000 elts
+	throughput: 7272882.94 elts/sec @ 4000000 elts
+	throughput: 6849094.57 elts/sec @ 5000000 elts
+	...
+	throughput: 6215628.98 elts/sec @ 522000000 elts
+	throughput: 6219111.63 elts/sec @ 523000000 elts
+	throughput: 6223198.90 elts/sec @ 524000000 elts
+	...
+	throughput: 6028748.73 elts/sec @ 1046000000 elts
+	throughput: 6030676.76 elts/sec @ 1047000000 elts
+	throughput: 6032800.13 elts/sec @ 1048000000 elts
+
+The first two are definitely different, with the newer version faster, but neither catches up to the trie crate implementation. This might be because there are other optimizations I have forgotten about, or it might be because of those great motivating explanations, like that we only end up merging (and copying) `(T, isize)` pairs rather than full `(K, V, T, isize)` tuples.
+
+For reference, here are some of the other parameter settings we considered. First, the 1000 key and 1001 value setting, which should have shorter runs of times and less effective copying:
+
+	Echidnatron% cargo run --release --bin profile-insert -- 1000 1001 1000 1000 lists
+	     Running `target/release/profile-insert 1000 1001 1000 1000 lists`
+	throughput: 6629849.74 elts/sec @ 1000000 elts
+	throughput: 6379930.74 elts/sec @ 2000000 elts
+	throughput: 5798108.45 elts/sec @ 3000000 elts
+	throughput: 6028078.50 elts/sec @ 4000000 elts
+	throughput: 5335330.10 elts/sec @ 5000000 elts
+	...
+	throughput: 3927461.80 elts/sec @ 522000000 elts
+	throughput: 3931341.55 elts/sec @ 523000000 elts
+	throughput: 3935778.65 elts/sec @ 524000000 elts
+
+And next the single key, single value case, which should have highly effective copying behavior.
+
+	Echidnatron% cargo run --release --bin profile-insert -- 1 1 1000 1000 lists
+	     Running `target/release/profile-insert 1 1 1000 1000 lists`
+	throughput: 7618399.66 elts/sec @ 1000000 elts
+	throughput: 7456742.90 elts/sec @ 2000000 elts
+	throughput: 6737874.21 elts/sec @ 3000000 elts
+	throughput: 7021508.62 elts/sec @ 4000000 elts
+	throughput: 6288380.26 elts/sec @ 5000000 elts
+	...
+	throughput: 4951442.39 elts/sec @ 522000000 elts
+	throughput: 4956449.23 elts/sec @ 523000000 elts
+	throughput: 4962011.37 elts/sec @ 524000000 elts
+
+So, good news and improvements for our target application, where we have these histories with increasing times at the heart of everything. Still it seems that the trie crate's performance is better than for sorted lists, but surely there are still smarter things to do also. We will look harder once we've worked through the other things we need `Trace` to do.
 
 ## Part 4: Adding an index.
 
